1.1: ?/?/2024
	* Fixed some of the logic to allow us to control all bytes in the output Zip.
	* Added ZipCentralDirectoryEndInfo to be able to control the end structure.

1.0: 5/22/2024
	* Fixed a problem with early stream-closing.  Surprised I didn't catch this earlier.
	* Started to add some code examples.

0.9: 5/21/2024
	* Added auto-skipping of file-data in ZipFileInput if you didn't read any data or didn't read to the end.
	* Added initial documentation.  Caused a lot of class renaming.
	* Renamed some modified date/time fields in the ZipFileHeader and ZipCentralDirectoryFileEntry.
	* Renamed DataDescriptor to ZipDataDescriptor.
	* Renamed CentralDirectoryFileHeader to ZipCentralDirectoryFileEntry.
	* Renamed CentralDirectoryFileInfo to ZipCentralDirectoryFileInfo.
	* Renamed CentralDirectoryEnd to ZipCentralDirectoryEnd.

0.8: 5/21/2024
	* Renamed ZipFileReader and ZipFileWriter to ZipFileInput and ZipFileOutput.
	* Added assigning permissions to files written by ZipFileInput.

0.7: 5/20/2024
	* Added better support for Unix and MSDOS file permissions.
	* Added reading from ZipFileReader and writing to a File directly.
	* Added support for writing file-data to the ZipFileWriter via an OutputStream.
	* Added support for reading file-data from the ZipFileReader via an InputStream.
	* Added with...() method chaining to some of the builder classes.
	* Fixed problems with streaming Zip files inside of Zip files because of possibility of reading past the inner one.
	* Fixed problems with compression level flags.

0.6: 5/16/2024
	* Added ZipFileReader.readRaw... and ZipFileWriter.writeRaw... methods for dealing with unencoded data.
	* Some method and field renames as things stabilize and test coverage grows.
	* Added buffering to the ZipFileWriter which can be enabled to fill out ZipFileHeader before writing file data.

0.5: 5/14/2024
	* Improved the test coverage and normalized some of the method names in the process.

0.4: 5/14/2024